[build-system]
requires = ["flit_core >=3.2,<4", "pandas >=1.5.3", "numpy>=1.22.1", "matplotlib>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "platemappy"
authors = [{name = "Haleigh Miller", email = "haleigh.miller@ucsf.edu"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
